--- a/aboutme.html
+++ b/aboutme.html
@@ -309,6 +309,7 @@ a {
         <li>Gum Drop Hop 3</li>
         <li>Gum Drop Hop 4</li>
         <li>GunCrafter</li>
+        <li>Hades</li>
         <li>Half-Life</li>
         <li>Half-Life 2</li>
         <li>Hand Simulator</li>
@@ -329,6 +330,7 @@ a {
         <li>Illuminati vs. Memes MLG</li>
         <li>IMSCARED</li>
         <li>INPUT6</li>
+        <li>Inscryption</li>
         <li>It Steals</li>
         <li>Jelly Jump</li>
         <li>JKLM.FUN Party Games</li>
@@ -337,6 +339,7 @@ a {
         <li>Just More Doors</li>
         <li>Just Shapes and Beats</li>
         <li>Kahoot!</li>
+        <li>Keep Talking and Nobody Explodes</li>
         <li>KinitoPET</li>
         <li>Lethal Company</li>
         <li>Levers</li>
@@ -360,6 +363,7 @@ a {
         <li>Minesweeper</li>
         <li>Minesweeper Classic: Retro</li>
         <li>Mini DAYZ: Zombie Survival</li>
+        <li>MiSide</li>
         <li>Money Tree: Business Tycoon</li>
         <li>Mono</li>
         <li>MONOPOLY Game</li>
@@ -368,6 +372,7 @@ a {
         <li>Monstrum</li>
         <li>Monument Valley</li>
         <li>Monument Valley 2</li>
+        <li>Mouthwashing</li>
         <li>Muddy Heights</li>
         <li>Muddy Heights 2</li>
         <li>Nested</li>
