--- a/stringtool/index.html
+++ b/stringtool/index.html
@@ -25,7 +25,7 @@ header {
 	overflow-y: hidden;
 	transition: all 0.2s;
 }
-header p {
+header p, header ul {
 	margin-left: 2.5%;
 	margin-right: 2.5%;
 	text-align: justify;
@@ -37,6 +37,7 @@ header:hover {
 }
 section {
 	height: 100%;
+	overflow-y: auto;
 }
 textarea {
 	resize: none;
@@ -70,9 +71,14 @@ input {
 	display: flex;
 }
 .left-info, .right-info {
-	width: 25%;
 	margin: 0;
 	background: #ddd;
+}
+.left-info {
+	width: 30%;
+}
+.right-info {
+	width: 20%;
 }
 .middle-txtarea {
 	width: 50%;
@@ -88,13 +94,23 @@ input {
 <br>
 <p>Stringtool is a pointless website that was made by SciPred for the sake of - well, for the sake of editing a single input string.</p>
 <p>The first few versions were weirdly designed and was almost entirely unusable on mobile. In 2025 I decided to rewrite the entire thing from scratch and make it more responsive and straight to the point. This also includes removing the header height expansion on hover, which made controls difficult.</p>
-<p>Some features, such as <i>Function Mode</i>, were removed entirely due to inconsistency and inefficiency in operation despite having a built-in guide on how to use it. Buttons for controls were added to the sides, and operations that involved extra inputs such as <i>slice</i> and <i>substr</i> had their menus removed entirely. All input fields are now beside their corresponding operation buttons to make the layout more user-friendly.</p>
-<p>Many more operations and features were added for convenience, such as more information on the string rather than just length. More features may be added in the future.</p>
+<p>Some features, such as <i>Function Mode</i>, were removed entirely due to inconsistency and inefficiency in operation despite having a built-in guide on how to use it. Buttons for controls were added to the sides, and operations that involved extra inputs such as <i>slice</i> and <i>substr</i> had their menus removed entirely. All input fields are now beside their corresponding operation buttons to make the layout more user-friendly. Some operations may share the same input fields.</p>
+<p>Many more operations and features were added for convenience, such as more information on the string rather than just length. More features may be added in the future - however, take note that as of now not all methods from <i>String.prototype</i> are Stringtool operations, and vice versa.</p>
+<h4>Newest Changes:</h4>
+<ul>
+	<li>Removed the <i>substr</i> operation, as it is deprecated.</li>
+	<li>Added the <i>pad</i> operations.</li>
+	<li>Added <i>EXTERNAL CONTROLS</i>. These include clipboard functions such as <i>Copy</i> and <i>Paste</i>.</li>
+	<li>Added a new section in <i>GENERAL STRING INFO</i> that returns the first, last, and most repeated characters in the String.</li>
+	<li>Slightly improved header overflow.</li>
+	<li>Adjusted the widths of the left and right sections.</li>
+	<li>Added readability in <i>GENERAL STRING INFO</i> for some characters that may appear as blank.</li>
+</ul>
 </header>
 
 <div class="main-container">
 <section class="left-info">
-<h3>CONTROLS</h3>
+<h3>STRING CONTROLS</h3>
 <hr>
 <button onclick="StrControls.clear()">Clear</button>
 <button onclick="StrControls.reverse()">Reverse</button><br>
@@ -121,9 +137,10 @@ input {
 <input type="number" class="str-substring" placeholder="Start">
 <input type="number" class="str-substring" placeholder="End">
 <button onclick="StrControls.substring()">Substring</button><br>
-<input type="number" class="str-substr" placeholder="Start">
-<input type="number" class="str-substr" placeholder="Length">
-<button onclick="StrControls.substr()">Substr</button><br>
+<input type="number" class="str-pad" placeholder="Length">
+<input type="text" class="str-pad" placeholder="Padder">
+<button onclick="StrControls.pad()">Pad Start</button>
+<button onclick="StrControls.pad('e')">Pad End</button><br>
 <hr>
 <input type="number" class="str-moveChar" placeholder="Multiplier">
 <button onclick="StrControls.moveChar()">Shift First to Last</button>
@@ -142,6 +159,13 @@ input {
 <button onclick="StrControls.remove('d')">Remove Numbers</button><br>
 <button onclick="StrControls.remove('s')">Remove Whitespaces</button>
 <button onclick="StrControls.remove('n')">Remove Newlines</button><br>
+<hr>
+<h3>EXTERNAL CONTROLS</h3>
+<button onclick="ExtControls.copy()">Copy To Clipboard</button>
+<button onclick="ExtControls.copy('d')">Cut</button>
+<button onclick="ExtControls.paste()">Paste</button>
+<button onclick="ExtControls.paste('a')">Append Paste</button><br>
+<br><br><br>
 </section>
 
 <section class="middle-txtarea">
@@ -150,7 +174,7 @@ input {
 </section>
 
 <section class="right-info">
-<h3>STRING INFORMATION</h3>
+<h3>GENERAL STRING INFO</h3>
 <hr>
 <p>Length: 0</p>
 <p>Letters: 0</p>
@@ -163,6 +187,11 @@ input {
 <p>Spaces: 0</p>
 <p>Tab Characters: 0</p>
 <p>Newlines: 0</p>
+<hr>
+<p>First Character: Nothing</p>
+<p>Last Character: Nothing</p>
+<p>Mode Characters: Nothing</p>
+<br><br><br>
 </section>
 </div>
 <script>
@@ -173,20 +202,49 @@ function gTag(tag) {return document.getElementsByTagName(tag);}
 var ta = gID("strval");
 
 var ElmControls = {
-	aboutHeight: '10%'
+	aboutHeight: '10%',
+	aboutOverflowY: 'hidden'
 };
 
 function toggleAbout() {
-	gTag("header")[0].style.height = ElmControls.aboutHeight === '10%' ? '50%' : '10%';
+	// NOTE: Always edit the height true value depending on the Newest Changes list height.
+	gTag("header")[0].style.height = ElmControls.aboutHeight === '10%' ? '75%' : '10%';
 	ElmControls.aboutHeight = gTag("header")[0].style.height;
+	gTag("header")[0].style.overflowY = ElmControls.aboutOverflowY === 'hidden' ? 'auto' : 'hidden';
+	ElmControls.aboutOverflowY = gTag("header")[0].style.overflowY;
 }
 gTag("header")[0].addEventListener("click", toggleAbout);
+
+function makeReadable(c) {
+	switch (c) {
+	case ' ':
+		return "Space";
+		break;
+	case '\n':
+		return "Newline";
+		break;
+	case '\t':
+		return "Tab";
+		break;
+	case '\v':
+		return "Vertical Tab";
+		break;
+	case '\0':
+		return "Null";
+		break;
+	default:
+		return c;
+	}
+}
 
 function updateInfo() {
 	var rip = gClass("right-info")[0].getElementsByTagName("p");
 	rip[0].innerText = "Length: " + ta.value.length;
 	var strvala = 0, strvaln = 0, strvalm = 0, strvalendl = 0;
+	const charCount = {};
+	var maxCount = 0, maxChars = [];
 	for (var char of ta.value) {
+		charCount[char] = (charCount[char] || 0) + 1;
 		if (/[a-z]/i.test(char)) {
 			strvala++;
 		} else if (/[0-9]/.test(char)) {
@@ -213,6 +271,21 @@ function updateInfo() {
 	rip[6].innerText = "Spaces: " + (ta.value.match(/\s/g) || []).length;
 	rip[7].innerText = "Tab Characters: " + (ta.value.match(/\t/g) || []).length;
 	rip[8].innerText = "Newlines: " + (ta.value.match(/\n/g) || []).length;
+
+	for (var char in charCount) {
+        if (charCount[char] > maxCount) {
+            maxCount = charCount[char];
+            maxChars = [char];
+        } else if (charCount[char] === maxCount) {
+            maxChars.push(char);
+        }
+    }
+    for (var char in maxChars) {
+    	maxChars[char] = makeReadable(maxChars[char]);
+    }
+	rip[9].innerText = "First Character: " + (ta.value.length !== 0 ? makeReadable(ta.value[0]) : "Nothing");
+	rip[10].innerText = "Last Character: " + (ta.value.length !== 0 ? makeReadable(ta.value[ta.value.length - 1]) : "Nothing");
+	rip[11].innerText = "Mode Characters: " + (ta.value.length !== 0 ? maxChars.join(", ") : "Nothing");
 }
 
 var StrControls = {
@@ -246,6 +319,10 @@ var StrControls = {
 			ta.value = access === 'l' ? ta.value.slice(-mult) + ta.value.slice(0, -mult) : ta.value.slice(mult) + ta.value.slice(0, mult);
 			updateInfo();
 		}
+	},
+	pad: function(access) {
+		ta.value = access === 'e' ? ta.value.padEnd(Math.abs(Number(gClass("str-pad")[0].value)), gClass("str-pad")[1].value) : ta.value.padStart(Math.abs(Number(gClass("str-pad")[0].value)), gClass("str-pad")[1].value);
+		updateInfo();
 	},
 	remove: function(access) {
 		switch (access) {
@@ -311,16 +388,6 @@ var StrControls = {
 		}
 		updateInfo();
 	},
-	substr: function() {
-		var v1 = Number(gClass("str-substr")[0].value), v2 = gClass("str-substr")[1].value;
-		v1 = Number.isInteger(v1) ? v1 : isNaN(v1) ? 0 : Math.trunc(v1);
-		if (v2 === "" || v2 === '') {
-			ta.value = ta.value.substr(v1);
-		} else {
-			ta.value = ta.value.substr(v1, Number(v2));
-		}
-		updateInfo();
-	},
 	substring: function() {
 		var v1 = Number(gClass("str-substring")[0].value), v2 = gClass("str-substring")[1].value;
 		v1 = Number.isInteger(v1) ? v1 : isNaN(v1) ? 0 : Math.trunc(v1);
@@ -344,6 +411,33 @@ var StrControls = {
 			break;
 		}
 		updateInfo();
+	}
+};
+
+var ExtControls = {
+	// NOTE: document.execCommand is deprecated, and using 'paste' is disabled on modern browsers. Using navigator.clipboard is a better approach
+	copy: function(access) {
+		navigator.clipboard.writeText(ta.value).then(text => {
+			if (access === 'd') {
+				StrControls.clear();
+			}
+		}).catch(err => {
+			console.error("ExtControls returned the following error:", err);
+			alert(`Failed to ${access === 'd' ? 'cut': 'copy'} text. Please paste manually or check permissions.`);
+		});
+	},
+	paste: function(access) {
+		navigator.clipboard.readText().then(text => {
+			if (access === 'a') {
+				ta.value += text;
+			} else {
+				ta.value = text;
+			}
+			updateInfo();
+		}).catch(err => {
+			console.error("ExtControls returned the following error:", err);
+			alert("Failed to paste text. Please paste manually or check permissions.");
+		});
 	}
 };
 </script>
