--- a/stringtool/index.html
+++ b/stringtool/index.html
@@ -65,6 +65,22 @@ input {
 	width: 21%;
 	margin-bottom: 3px;
 }
+span {
+	display: none;
+	position: absolute;
+	left: 0;
+	top: 0;
+	background: #bbb;
+	color: black;
+	border-bottom-right-radius: 10px;
+	padding: 5px;
+	cursor: pointer;
+	transition: all 0.25s;
+	z-index: 100;
+}
+span:hover {
+	color: green;
+}
 .main-container {
 	height: 90%;
 	width: 100%;
@@ -79,6 +95,14 @@ input {
 }
 .right-info {
 	width: 20%;
+	position: relative;
+	transition: all 0.25s;
+}
+.right-container {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	transition: all 0.25s;
 }
 .middle-txtarea {
 	width: 50%;
@@ -98,13 +122,7 @@ input {
 <p>Many more operations and features were added for convenience, such as more information on the string rather than just length. More features may be added in the future - however, take note that as of now not all methods from <i>String.prototype</i> are Stringtool operations, and vice versa.</p>
 <h4>Newest Changes:</h4>
 <ul>
-	<li>Removed the <i>substr</i> operation, as it is deprecated.</li>
-	<li>Added the <i>pad</i> operations.</li>
-	<li>Added <i>EXTERNAL CONTROLS</i>. These include clipboard functions such as <i>Copy</i> and <i>Paste</i>.</li>
-	<li>Added a new section in <i>GENERAL STRING INFO</i> that returns the first, last, and most repeated characters in the String.</li>
-	<li>Slightly improved header overflow.</li>
-	<li>Adjusted the widths of the left and right sections.</li>
-	<li>Added readability in <i>GENERAL STRING INFO</i> for some characters that may appear as blank.</li>
+	<li>Added a responsive functionality that automatically reduces the width of the right section when the window's height is greater than its width (i.e. portrait). (This is experimental and is subject to change.)</li>
 </ul>
 </header>
 
@@ -174,6 +192,7 @@ input {
 </section>
 
 <section class="right-info">
+<div class="right-container">
 <h3>GENERAL STRING INFO</h3>
 <hr>
 <p>Length: 0</p>
@@ -191,6 +210,8 @@ input {
 <p>First Character: Nothing</p>
 <p>Last Character: Nothing</p>
 <p>Mode Characters: Nothing</p>
+</div>
+<span onclick="ElmControls.spanResize()">INFO</span>
 <br><br><br>
 </section>
 </div>
@@ -203,12 +224,43 @@ var ta = gID("strval");
 
 var ElmControls = {
 	aboutHeight: '10%',
-	aboutOverflowY: 'hidden'
+	aboutOverflowY: 'hidden',
+	isSectionExpanded: false,
+	portraitResize: function() {
+		if (window.innerHeight > window.innerWidth) {
+			gTag("span")[0].style.display = "block";
+			gClass("right-info")[0].style.width = "10%";
+			gClass("right-container")[0].style.opacity = 0;
+			gClass("middle-txtarea")[0].style.width = "60%";
+		} else {
+			gTag("span")[0].style.display = "none";
+			gClass("right-info")[0].style.width = "20%";
+			gClass("right-container")[0].style.opacity = 1;
+			gClass("middle-txtarea")[0].style.width = "50%";
+		}
+		this.isSectionExpanded = false;
+	},
+	spanResize: function() {
+		if (!this.isSectionExpanded) {
+			gClass("right-info")[0].style.width = "30%";
+			gClass("right-container")[0].style.opacity = 1;
+			gClass("middle-txtarea")[0].style.width = "40%";
+			this.isSectionExpanded = true;
+		} else {
+			gClass("right-info")[0].style.width = "10%";
+			gClass("right-container")[0].style.opacity = 0;
+			gClass("middle-txtarea")[0].style.width = "60%";
+			this.isSectionExpanded = false;
+		}
+	}
 };
+window.onresize = ElmControls.portraitResize;
+window.onload = ElmControls.portraitResize;
+
 
 function toggleAbout() {
 	// NOTE: Always edit the height true value depending on the Newest Changes list height.
-	gTag("header")[0].style.height = ElmControls.aboutHeight === '10%' ? '75%' : '10%';
+	gTag("header")[0].style.height = ElmControls.aboutHeight === '10%' ? '60%' : '10%';
 	ElmControls.aboutHeight = gTag("header")[0].style.height;
 	gTag("header")[0].style.overflowY = ElmControls.aboutOverflowY === 'hidden' ? 'auto' : 'hidden';
 	ElmControls.aboutOverflowY = gTag("header")[0].style.overflowY;
