--- a/aboutme.html
+++ b/aboutme.html
@@ -198,6 +198,7 @@ a {
         <li>Close Your Eyes</li>
         <li>Clustertruck</li>
         <li>cmplt</li>
+        <li>Coffee Golf</li>
         <li>Coin Dozer Pro</li>
         <li>Color Ballz</li>
         <li>Color Fence - Mind Puzzler</li>
