updating some pages

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,20 +1,20 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
 <title>About Me</title>
 <meta charset="UTF-8">
-<meta name="description" content="SciPred's Official About Me.">
+<meta name="description" content="SciPred's Official About Me">
 <meta name="author" content="SciPred">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-html, body, section {
-	width: 100%;
-	height: 100%;
-	margin: 0;
-	font-family: 'Courier New', Courier, monospace;
-	overflow: auto;
-	cursor: default;
-	color: white;
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    font-family: 'Courier New', Courier, monospace;
+    overflow: auto;
+    cursor: default;
+    color: white;
     text-align: center;
     background: black;
 }
@@ -25,124 +25,136 @@ body {
 body::-webkit-scrollbar {
     display: none;
 }
+section {
+    width: 60%;
+    margin: auto;
+}
 h1 {
-	color: #00e600;
-	text-decoration: underline;
-	font-weight: bolder;
-	font-size: 35px;
-    animation: borderlol 12s infinite linear;
-    background: linear-gradient(90deg, #00e600 50%, transparent 50%), linear-gradient(90deg, #00e600 50%, transparent 50%), linear-gradient(0deg, #00e600 50%, transparent 50%), linear-gradient(0deg, #00e600 50%, transparent 50%);
-    background-repeat: repeat-x, repeat-x, repeat-y, repeat-y;
-    background-size: 15px 4px, 15px 4px, 4px 15px, 4px 15px;
-    background-position: 0% 0%, 100% 100%, 0% 100%, 100% 0px;
-    padding: 10px;
-    transition: all 0.4s;
+    color: #0f0;
+    text-decoration: underline;
+    font-weight: bolder;
+    font-size: 40px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    transition: all 0.3s;
 }
 h1:hover {
-    background-color: white;
     color: black;
-}
-h2 {
-	color: #e6e600;
-	font-size: 30px;
-}
-h3 {
-	color: red;
-	text-decoration: underline;
-    font-size: 21px;
+    background-color: #0f0;
 }
 h4 {
-    color: blue;
-    font-size: 18px;
-}
-summary {
-    color: aquamarine;
+    color: gray;
+    padding: 10px;
 }
 p {
     font-weight: bold;
+    width: 80%;
+    margin: auto;
 }
-p, ol li {
-    margin-left: 30px;
-    margin-right: 30px;
+li:hover {
+    color: #cfc;
+}
+ol li {
+    font-weight: bolder;
     list-style-position: inside;
+    text-align: left;
+}
+ol ul {
+    margin-left: 20px;
+}
+
+ol ul li {
+    list-style-position: inside;
+    text-align: left;
 }
 a {
     color: rgb(200, 200, 0);
+    transition: all 0.25s;
 }
-@keyframes borderlol {
-    to {
-        background-position: 100% 0%, 0% 100%, 0% 0%, 100% 100%;
-    }
+a:hover {
+    color: black;
+    background: rgb(200, 200, 0);
+}
+summary {
+    cursor: pointer;
+    transition: all 0.2s;
+    color: aquamarine;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+summary:hover {
+    color: black;
+    background-color: aquamarine;
 }
 </style>
 </head>
 <body>
-<h1>About Me</h1>
-<h2>I'm not sure why you want to know stuff about me. But here we are.</h2>
-<h3>Please note that some information may be outdated.</h3>
+<section>
+<h1>About SciPred</h1>
+</section>
 <details>
-    <summary>Name</summary>
-    <p>[loading]</p>
-</details>
-<details>
-    <summary>Real Name</summary>
-    <p>[loading]</p>
-</details>
-<details>
-    <summary>Address</summary>
-    <p>[loading]</p>
+    <summary>Who am I?</summary>
+    <p>My name is SciPred, <a href='https://www.youtube.com/watch?v=D6do5iNnfRc&t=1s&pp=ygUOc2NpcHJlZCB3aHkgbXk%3D' target="_blank">a shortened version of SciencePredator1</a>. The shortened version, being easier to pronounce, was what stuck - however, some people call me "Sci" or "Pred" for convenience. However, <a href='https://www.youtube.com/watch?v=cdI4xdk0Pjc&pp=ygUTc2NpcHJlZCBiYWNrIHdoZW4gaQ%3D%3D' target="_blank">I used to go by other names</a>.</p>
 </details>
 <details>
     <summary>Email Address</summary>
-    <p>[loading]</p>
+    <p>For any sort of inquiries you may email me at science.mcpe@gmail.com.</p>
 </details>
 <details>
     <summary>Common Socials</summary>
-    <p>[loading]</p>
-    <p>[loading]</p>
-    <p>[loading]</p>
-    <p>[loading]</p>
-    <p>[loading]</p>
+    <p>Discord: scipred - You may send any direct message any time, but do not expect a response.</p>
+    <p>Reddit: u/SciPred - However, I rarely use the account.</p>
+    <p>Twitter/X: SciPred, @scipreda - Don't confuse the name with the tag.</p>
+    <p>YouTube: SciPred, @SciPred - This should be obvious enough.</p>
+    <p>YouTube Minecraft Clips/Random Stuff: SkyPred, @skypred3676 - No, I don't plan on changing that handle any time soon.</p>
 </details>
 <details>
-    <summary>Age</summary>
-    <p>[loading]</p>
-</details>
-<details>
-    <summary>Gender</summary>
-    <p>[loading]</p>
+    <summary>Age and Gender</summary>
+    <p>19 years old since this page was last updated. Straight male.</p>
 </details>
 <details>
     <summary>Hobbies</summary>
-    <p>[loading]</p>
+    <p>Playing games, calculating things, programming pointless programs, drinking milktea, and generating thought experiments.</p>
 </details>
 <details>
-    <summary>Video/Web/Mobile/PC Games I Play, Used To Play, or Seldom Play</summary>
+    <summary>Video/Web/Mobile/PC Games that I Play, Used To Play, Seldom Play, or Tried Out</summary>
     <ol>
         <li>(R)evolve</li>
-        <li>2048</li>
-        <li>2048 10x10</li>
-        <li>2048 3D</li>
-        <li>2048 4D</li>
-        <li>2048 Bricks</li>
+        <li>20 Small Mazes</li>
+        <li>2048 & Variants
+            <ul>
+            <li>2048</li>
+            <li>2048 10x10</li>
+            <li>2048 3D</li>
+            <li>2048 4D</li>
+            <li>2048 5x5</li>
+            <li>2048 Bricks</li>
+        </ul></li>
         <li>3:00 AM at The Krusty Krab</li>
         <li>4 Pics 1 Word</li>
+        <li>A Dance of Fire and Ice</li>
         <li>A Wonderful Day For Fishing</li>
         <li>Abiotic Factor</li>
         <li>agar.io</li>
         <li>Alien: Isolation</li>
         <li>Amazeness - Survive the maze</li>
         <li>Amazing Brick</li>
-        <li>Amnesia: A Machine For Pigs</li>
-        <li>Amnesia: Rain</li>
-        <li>Amnesia: Rebirth</li>
-        <li>Amnesia: The Dark Descent</li>
+        <li>Amnesia
+            <ul>
+            <li>Amnesia: A Machine For Pigs</li>
+            <li>Amnesia: Rain</li>
+            <li>Amnesia: Rebirth</li>
+            <li>Amnesia: The Dark Descent</li>
+        </ul></li>
         <li>Among Us!</li>
         <li>ANATOMY</li>
-        <li>Angry Birds</li>
-        <li>Angry Birds 2</li>
-        <li>Angry Birds Epic RPG</li>
-        <li>Angry Birds Seasons Free</li>
+        <li>Angry Birds
+            <ul>
+            <li>Angry Birds</li>
+            <li>Angry Birds 2</li>
+            <li>Angry Birds Epic RPG</li>
+            <li>Angry Birds Seasons Free</li>
+        </ul></li>
         <li>Ao Oni</li>
         <li>Apex Legends Mobile</li>
         <li>Arrow.io</li>
@@ -151,18 +163,29 @@ a {
         <li>Bad Ice Cream</li>
         <li>Bad Ice Cream 2</li>
         <li>Bad Ice Cream 3</li>
-        <li>Baldi Balds the Universe (Baldi's Basics Mod)</li>
-        <li>Baldi Goes Crazy Part 1 (Baldi's Basics Mod)</li>
-        <li>Baldi Goes Crazy Part 2 (Baldi's Basics Mod)</li>
-        <li>Baldi's Basics Birthday Bash</li>
-        <li>Baldi's Basics Classic Remastered</li>
-        <li>Baldi's Basics Corruption Unremastered (Baldi's Basics Mod)</li>
-        <li>Baldi's Basics in Education and Learning</li>
-        <li>Baldi's Basics Plus</li>
-        <li>Baldi's Unreal Basics (COMPLETE)</li>
+        <li>Baldi's Basics & Modded Variants
+            <ul>
+            <li>Baldi Balds the Universe (Baldi's Basics Mod)</li>
+            <li>Baldi Goes Crazy Part 1 (Baldi's Basics Mod)</li>
+            <li>Baldi Goes Crazy Part 2 (Baldi's Basics Mod)</li>
+            <li>Baldi's Basics Birthday Bash</li>
+            <li>Baldi's Basics Classic Remastered</li>
+            <li>Baldi's Basics Corruption Unremastered (Baldi's Basics Mod)</li>
+            <li>Baldi's Basics in Education and Learning</li>
+            <li>Baldi's Basics Plus</li>
+            <li>Baldi's Unreal Basics (COMPLETE)</li>
+            <li>Basic'9 Remaked (Baldi's Basics Mod)</li>
+            <li>CaseOh's Basics in Eating and Fast Food (Baldi's Basics Mod)</li>
+            <li>Obama's Basics in Winning the Vote (Baldi's Basics Mod)</li>
+            <li>Raldi's Crackhouse (Baldi's Basics Mod)</li>
+            <li>Waldi's Wankhouse Demo (Baldi's Basics Mod)</li>
+            <li>Yin's Birthday Bash Reimagined (Baldi's Basics Mod)</li>
+        </ul></li>
         <li>Ballz</li>
         <li>Ballz Break</li>
         <li>Bean Boy</li>
+        <li>Beat Saber</li>
+        <li>Beatblock Demo</li>
         <li>Bendy and the Ink Machine</li>
         <li>Bird 420 - MLG Flappy edition</li>
         <li>Bitcoin!</li>
@@ -181,16 +204,19 @@ a {
         <li>Can You Escape</li>
         <li>Can You Escape 2</li>
         <li>Can Your Pet?</li>
-        <li>Candy Crush Friends Saga</li>
-        <li>Candy Crush Jelly Saga</li>
-        <li>Candy Crush Saga</li>
-        <li>Candy Crush Soda Saga</li>
+        <li>Candy Crush
+            <ul>
+            <li>Candy Crush Friends Saga</li>
+            <li>Candy Crush Jelly Saga</li>
+            <li>Candy Crush Saga</li>
+            <li>Candy Crush Soda Saga</li>
+        </ul></li>
         <li>Cards Against Humanity</li>
         <li>CarrotFantasy</li>
-        <li>CaseOh's Basics in Eating and Fast Food (Baldi's Basics Mod)</li>
         <li>Cat Mario (Syobon Action)</li>
         <li>Catastrophe Crow</li>
         <li>chess.com</li>
+        <li>Chuck Nolemland and The Starving Kid</li>
         <li>Circle</li>
         <li>Clash Royale</li>
         <li>Clay Jam!</li>
@@ -204,6 +230,7 @@ a {
         <li>Color Fence - Mind Puzzler</li>
         <li>Color Switch</li>
         <li>Connection Haunted</li>
+        <li>Content Warning</li>
         <li>Cookie Clicker</li>
         <li>Cookie Clicker classic</li>
         <li>Corpse Party</li>
@@ -218,19 +245,23 @@ a {
         <li>Dark Deception</li>
         <li>Dead End Road</li>
         <li>Dead Ringer: Fear Yourself LITE</li>
+        <li>Debug Deadline</li>
         <li>Deltarune</li>
         <li>diep.io</li>
         <li>Discover My Body</li>
         <li>Do Not Disturb! Funny Game</li>
         <li>doge2048.com</li>
         <li>Doki Doki Literature Club</li>
-        <li>Doodle Jump</li>
-        <li>Doodle Jump 2</li>
-        <li>Doodle Jump - Insanely Good!</li>
-        <li>Doodle Jump Christmas PLUS</li>
-        <li>Doodle Jump Christmas Special</li>
-        <li>Doodle Jump Easter Special</li>
-        <li>Doodle Jump Race</li>
+        <li>Doodle Jump
+            <ul>
+            <li>Doodle Jump</li>
+            <li>Doodle Jump 2</li>
+            <li>Doodle Jump - Insanely Good!</li>
+            <li>Doodle Jump Christmas PLUS</li>
+            <li>Doodle Jump Christmas Special</li>
+            <li>Doodle Jump Easter Special</li>
+            <li>Doodle Jump Race</li>
+        </ul></li>
         <li>Door</li>
         <li>Dots & Co: A Puzzle Adventure</li>
         <li>Draw A Stickman: EPIC</li>
@@ -265,18 +296,24 @@ a {
         <li>Feed Your Cat.</li>
         <li>FILTHBREED</li>
         <li>Fire Balls 3D</li>
-        <li>Fireboy and Watergirl in the Forest Temple</li>
-        <li>Fireboy and Watergirl 2: In the Light Temple</li>
-        <li>Fireboy and Watergirl 3: In the Ice Temple</li>
-        <li>Fireboy and Watergirl 4: In the Crystal Temple</li>
-        <li>Fireboy and Watergirl 5: Elements</li>
-        <li>Fireboy and Watergirl 6: Fairy Tales</li>
+        <li>Fireboy and Watergirl
+            <ul>
+            <li>Fireboy and Watergirl in the Forest Temple</li>
+            <li>Fireboy and Watergirl 2: In the Light Temple</li>
+            <li>Fireboy and Watergirl 3: In the Ice Temple</li>
+            <li>Fireboy and Watergirl 4: In the Crystal Temple</li>
+            <li>Fireboy and Watergirl 5: Elements</li>
+            <li>Fireboy and Watergirl 6: Fairy Tales</li>
+        </ul></li>
         <li>Fish Eat Fish</li>
         <li>Fit In The Hole</li>
-        <li>Five Nights At Freddy's</li>
-        <li>Five Nights At Freddy's 2</li>
-        <li>Five Nights At Freddy's 3</li>
-        <li>Five Nights At Freddy's 4</li>
+        <li>Five Nights at Freddy's
+            <ul>
+            <li>Five Nights At Freddy's</li>
+            <li>Five Nights At Freddy's 2</li>
+            <li>Five Nights At Freddy's 3</li>
+            <li>Five Nights At Freddy's 4</li>
+        </ul></li>
         <li>Flappy Bird</li>
         <li>flappy-2048.com</li>
         <li>Flow Free</li>
@@ -297,6 +334,7 @@ a {
         <li>Geostorm</li>
         <li>Getting Over It</li>
         <li>gettoz.com</li>
+        <li>Girls' Frontline 2: Exilium</li>
         <li>Granny</li>
         <li>Granny 2</li>
         <li>Granny 3</li>
@@ -319,14 +357,18 @@ a {
         <li>Harvest Festival 64</li>
         <li>Hello Neighbor</li>
         <li>Hill Climb Racing</li>
+        <li>Hole.io</li>
         <li>Honkai: Star Rail</li>
         <li>I am Bread</li>
         <li>I Love Hue</li>
         <li>I Love Hue Too</li>
-        <li>I'm On Observation Duty</li>
-        <li>I'm On Observation Duty 3</li>
-        <li>I'm On Observation Duty 4</li>
-        <li>I'm On Observation Duty 5</li>
+        <li>I'm On Observation Duty
+            <ul>
+            <li>I'm On Observation Duty</li>
+            <li>I'm On Observation Duty 3</li>
+            <li>I'm On Observation Duty 4</li>
+            <li>I'm On Observation Duty 5</li>
+        </ul></li>
         <li>Identity V</li>
         <li>Illuminati vs. Memes MLG</li>
         <li>IMSCARED</li>
@@ -360,7 +402,15 @@ a {
         <li>Meme Clicker - MLG Christmas</li>
         <li>Meme Crush - MLG Kush edition</li>
         <li>Merge Town!</li>
-        <li>Minecraft (Bedrock Edition, Education Edition, Java Edition, Pocket Edition, VR, Xbox 360 Edition)</li>
+        <li>Minecraft
+            <ul>
+            <li>Minecraft: Bedrock Edition</li>
+            <li>Minecraft: Education Edition</li>
+            <li>Minecraft: Java Edition</li>
+            <li>Minecraft: Pocket Edition</li>
+            <li>Minecraft VR</li>
+            <li>Minecraft: Xbox 360 Edition</li>
+        </ul></li>
         <li>Minesweeper</li>
         <li>Minesweeper Classic: Retro</li>
         <li>Mini DAYZ: Zombie Survival</li>
@@ -383,8 +433,7 @@ a {
         <li>No Players Online Classic</li>
         <li>Not Not</li>
         <li>Nox Timore</li>
-        <li>Obama's Basics in Winning the Vote (Baldi's Basics Mod)</li>
-        <li>Omori</li>
+        <li>OMORI</li>
         <li>One Chance</li>
         <li>osu!</li>
         <li>Outlast</li>
@@ -422,7 +471,6 @@ a {
         <li>Pythagorea</li>
         <li>QT</li>
         <li>Raft</li>
-        <li>Raldi's Crackhouse (Baldi's Basics Mod)</li>
         <li>Really Bad Chess</li>
         <li>red (game)</li>
         <li>Revenge of the Colon</li>
@@ -447,6 +495,7 @@ a {
         <li>Scribblenauts Remix</li>
         <li>Scribblenauts Unlimited</li>
         <li>Sexy Hiking</li>
+        <li>Sharks and Minnows</li>
         <li>Shotgun King: The Final Checkmate</li>
         <li>Skyward</li>
         <li>SLENDER</li>
@@ -511,22 +560,27 @@ a {
         <li>Timore</li>
         <li>Timore Inferno</li>
         <li>Tomb of the Mask</li>
+        <li>Tomb Runner</li>
         <li>Totally Accurate Battle Simulator</li>
         <li>Totally Accurate Battle Zombielator</li>
         <li>Trap Adventure</li>
         <li>Trap Adventure 2</li>
-        <li>Trollface Quest</li>
-        <li>Trollface Quest 2</li>
-        <li>Trollface Quest 3</li>
-        <li>Trollface Quest 4</li>
-        <li>Trollface Quest 5</li>
-        <li>Trolltube</li>
+        <li>Trollface Quest
+            <ul>
+            <li>Trollface Quest</li>
+            <li>Trollface Quest 2</li>
+            <li>Trollface Quest 3</li>
+            <li>Trollface Quest 4</li>
+            <li>Trollface Quest 5</li>
+            <li>Trolltube</li>
+        </ul></li>
         <li>Two Dots</li>
         <li>Unblock Me</li>
         <li>Undertale</li>
         <li>UNO</li>
         <li>Unroll Me</li>
         <li>Untitled Goose Game</li>
+        <li>Vex 3</li>
         <li>Virtual Beggar</li>
         <li>Vlogger Go Viral: Tuber Life</li>
         <li>We Become What We Behold</li>
@@ -546,37 +600,11 @@ a {
         <li>Wuthering Waves</li>
         <li>Yandere Simulator</li>
         <li>yellow (game)</li>
-        <li>Yin's Birthday Bash Reimagined (Baldi's Basics Mod)</li>
-        <li>yorg.io</li>
+        <li>YORG.io</li>
         <li>ZigZag</li>
         <li>ZType</li>
     </ol>
-    <h4>The list is incomplete. It may be thoroughly updated when I remember the names of the other games I used to play as a child or from my short free time periods.</h4>
 </details>
-<h2>This site was last updated on December 12, 2023.</h2>
-
-<script>
-var texts = [
-"I'm SciPred, or SciencePredator1. <a href='https://www.youtube.com/watch?v=D6do5iNnfRc&t=1s&pp=ygUOc2NpcHJlZCB3aHkgbXk%3D'>I first chose this name playing Monster Legends.</a> The name stuck and got shortened and now it's what I'm usually called. Some people call me Sci or Pred for convenience. <a href='https://www.youtube.com/watch?v=cdI4xdk0Pjc&pp=ygUTc2NpcHJlZCBiYWNrIHdoZW4gaQ%3D%3D'>I used to go by other names though.</a>",
-"I can't disclose that information publicly.",
-"I can't disclose that information publicly.",
-"Well, I guess I can disclose this one. It's science.mcpe@gmail.com, if you have any inquiries (or you maybe just want to send an email for fun). However, my inbox is constantly bloated with newsletters that I don't know how to unsub from, so I might not even see your email.",
-"Discord: scipred. You can send direct messages at any time, but don't expect a response.",
-"Reddit: u/SciPred. But I haven't been using that account for a while now, and I'm using an alt which I cannot disclose yet.",
-"Twitter: SciPred, @scipreda. Don't confuse the name with the tag.",
-"YouTube: SciPred, @SciPred. I think this should be obvious enough.",
-"YouTube Minecraft Clips/Random Stuff: SkyPred, @skypred3676. No, I don't plan on changing that handle any time soon.",
-"I'm 17, which is right below the general age of consent.",
-"Male. Straight, so you can throw away any wet fantasies of me being of the opposite gender. (Or of any other gender, for that matter.)",
-"Playing, calculating, and thought experiments."
-];
-function clearAndUpdate() {
-    var ps = document.getElementsByTagName("p");
-    for (var i = 0; i < ps.length; i++) {
-        ps[i].innerHTML = texts[i];
-    }
-}
-setInterval(clearAndUpdate, 150);
-</script>
+<h4>This site was last updated on June 19, 2025. Note that if more than 100 days have passed since the last update, some information may be outdated at that point.</h4>
 </body>
 </html>
